--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           
             <p style="margin: 0;">
                 <p class="hover-sample">
-                <br><a href="https://www.colordic.org/">第1回　「牧野富太郎について」(09/23)</a>
+                <br><a href="https://azhr98.github.io/kadai/20230923">第1回　「牧野富太郎について」(09/23)</a>
                 </p>
    
                 <p class="hover-sample">
