--- a/index.html
+++ b/index.html
@@ -61,59 +61,59 @@
                 </p>
    
                 <p class="hover-sample">
-                <br><a href="https://www.colordic.org/">第2回　「品質の良い浄水器の選び方」(09/30)</a>
+                <br><a href="https://azhr98.github.io/kadai/20230930">第2回　「品質の良い浄水器の選び方」(09/30)</a>
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://www.colordic.org/">第3回　「公正証書について」(10/21)</a>
+                <br><a href="https://azhr98.github.io/kadai/20231021">第3回　「公正証書について」(10/21)</a>
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://www.colordic.org/">第4回　「デビットカードとは？」(10/28)</a>
+                <br><a href="https://azhr98.github.io/kadai/20231028">第4回　「デビットカードとは？」(10/28)</a>
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://www.colordic.org/">第5回　「ウユニ塩湖へ行きたい。」(11/04)</a>
+                <br><a href="https://azhr98.github.io/kadai/20231104">第5回　「ウユニ塩湖へ行きたい。」(11/04)</a>
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://www.colordic.org/">第6回　「小学生のプログラミング」(11/11)</a>
+                <br><a href="https://azhr98.github.io/kadai/20231111">第6回　「小学生のプログラミング」(11/11)</a>
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://www.colordic.org/">第7回　「AED講習会を受けるには」(11/18)</a>
+                <br><a href="https://azhr98.github.io/kadai/20231118">第7回　「AED講習会を受けるには」(11/18)</a>
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://www.colordic.org/">第8回　「」(11/25)</a>
+                <br><a href="https://azhr98.github.io/kadai/20231125">第8回　「」(11/25)</a>
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://www.colordic.org/">第9回　「バンドネオンとアコーディオンの違い」(12/02)</a>
+                <br><a href="https://azhr98.github.io/kadai/20231202">第9回　「バンドネオンとアコーディオンの違い」(12/02)</a>
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://www.colordic.org/">第10回　「北大路魯山人について」(12/09)</a>
+                <br><a href="https://azhr98.github.io/kadai/20231209">第10回　「北大路魯山人について」(12/09)</a>
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://www.colordic.org/">第11回　「」(12/16)</a>
+                <br><a href="https://azhr98.github.io/kadai/20231216">第11回　「」(12/16)</a>
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://www.colordic.org/">第12回　「」(12/23)</a>
+                <br><a href="https://azhr98.github.io/kadai/20231223">第12回　「」(12/23)</a>
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://www.colordic.org/">第13回　「」(01/06)</a>
+                <br><a href="https://azhr98.github.io/kadai/20240106">第13回　「」(01/06)</a>
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://www.colordic.org/">第14回　「」(01/20)</a>
+                <br><a href="20240120">第14回　「」(01/20)</a>
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://www.colordic.org/">第15回　「」(01/27)</a>
+                <br><a href="https://azhr98.github.io/kadai/20240127">第15回　「」(01/27)</a>
                 </p>
             </p>
             
