--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://azhr98.github.io/kadai/20231028">第4回　「デビットカードとは？」(10/28)</a>
+                <br><a href="https://azhr98.github.io/kadai/20231028/20231028">第4回　「デビットカードとは？」(10/28)</a>
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://azhr98.github.io/kadai/20231104">第5回　「ウユニ塩湖へ行きたい。」(11/04)</a>
+                <br><a href="https://azhr98.github.io/kadai/20231104/20231104">第5回　「ウユニ塩湖へ行きたい。」(11/04)</a>
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://azhr98.github.io/kadai/20231111">第6回　「小学生のプログラミング」(11/11)</a>
+                <br><a href="https://azhr98.github.io/kadai/20231111/20231111">第6回　「小学生のプログラミング」(11/11)</a>
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://azhr98.github.io/kadai/20231118">第7回　「AED講習会を受けるには」(11/18)</a>
+                <br><a href="https://azhr98.github.io/kadai/20231118/20231118">第7回　「AED講習会を受けるには」(11/18)</a>
                 </p>
 
                 <p class="hover-sample">
@@ -97,7 +97,7 @@
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://azhr98.github.io/kadai/20231216">第11回　「」(12/16)</a>
+                <br><a href="https://azhr98.github.io/kadai/20231216/20231216">第11回　「クリスマスの起源」(12/16)</a>
                 </p>
 
                 <p class="hover-sample">
@@ -130,7 +130,7 @@
                 
                 <br>管理者：azuma
                 <br>
-                <br>最終更新日：20231209
+                <br>最終更新日：20231216
                 <p class="hover-sample">URL：<a href="https://www.colordic.org/">https://github.com/azhr98/azhr89.git</a>
                 </p>
                 <br>
