--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://azhr98.github.io/kadai/20231202">第9回　「バンドネオンとアコーディオンの違い」(12/02)</a>
+                <br><a href="https://azhr98.github.io/kadai/20231202/20231202">第9回　「バンドネオンとアコーディオンの違い」(12/02)</a>
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://azhr98.github.io/kadai/20231209">第10回　「北大路魯山人について」(12/09)</a>
+                <br><a href="https://azhr98.github.io/kadai/20231209/20231209">第10回　「北大路魯山人について」(12/09)</a>
                 </p>
 
                 <p class="hover-sample">
@@ -128,14 +128,14 @@
               
             <footer class="footer">
                 
-                <br>管理者：azuma
+                <br>管理者：azhr98
                 <br>
                 <br>最終更新日：20231216
                 <p class="hover-sample">URL：<a href="https://www.colordic.org/">https://github.com/azhr98/azhr89.git</a>
                 </p>
                 <br>
                 <br>
-                <br><center>&copy; 2023/12/16 azuma.h</center>
+                <br><center>&copy; 2023/12/16 azuma</center>
 
             </footer>
 
