--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://azhr98.github.io/kadai/20231223">第12回　「」(12/23)</a>
+                <br><a href="https://azhr98.github.io/kadai/20231223/20231223">第12回　「食卓に海藻を」(12/23)</a>
                 </p>
 
                 <p class="hover-sample">
@@ -130,12 +130,12 @@
                 
                 <br>管理者：azhr98
                 <br>
-                <br>最終更新日：20231216
-                <p class="hover-sample">URL：<a href="https://www.colordic.org/">https://github.com/azhr98/azhr89.git</a>
+                <br>最終更新日：202312２３
+                <p class="hover-sample">URL：<a href="https://azhr98.github.io/azhr98">https://azhr98.github.io/azhr98</a>
                 </p>
                 <br>
                 <br>
-                <br><center>&copy; 2023/12/16 azuma</center>
+                <br><center>&copy; 2023/12/23 azuma</center>
 
             </footer>
 
