--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 
                 <br>管理者：azhr98
                 <br>
-                <br>最終更新日：202312２３
+                <br>最終更新日：20231223
                 <p class="hover-sample">URL：<a href="https://azhr98.github.io/azhr98">https://azhr98.github.io/azhr98</a>
                 </p>
                 <br>
