--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://azhr98.github.io/kadai/20240106">第13回　「」(01/06)</a>
+                <br><a href="https://azhr98.github.io/kadai/20240106/20240106">第13回　「オープンソースMOODLE」(01/06)</a>
                 </p>
 
                 <p class="hover-sample">
@@ -129,12 +129,14 @@
                 
                 <br>管理者：azhr98
                 <br>
-                <br>最終更新日：20231223
+                <br>最終更新日：20240106
                 <p class="hover-sample">URL：<a href="https://azhr98.github.io/azhr98">https://azhr98.github.io/azhr98</a>
+                </p>
+                <p class="hover-sample"><a href="https://azhr98.github.io/880ra/chiikawaquiz2/chiikawaquiz2">ちいかわ検定はコチラ</a>
                 </p>
                 <br>
                 <br>
-                <br><center>&copy; 2023/12/23 azuma</center>
+                <br><center>&copy; 2024/01/06 a</center>
 
             </footer>
 
