--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://azhr98.github.io/kadai/20231125">第8回　「」(11/25)</a>
+                <br><a href="https://azhr98.github.io/kadai/20231125">第8回　「公認心理士とは？」(11/25)</a>
                 </p>
 
                 <p class="hover-sample">
@@ -109,11 +109,11 @@
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="20240120">第14回　「」(01/20)</a>
+                <br><a href="https://azhr98.github.io/kadai/20240120/20240120">第14回　「カンテレ入門」(01/20)</a>
                 </p>
 
                 <p class="hover-sample">
-                <br><a href="https://azhr98.github.io/kadai/20240127">第15回　「」(01/27)</a>
+                <br><a href="https://azhr98.github.io/kadai/20240127/20240127">第15回　「プログラミングでゲーム制作」(01/27)</a>
                 </p>
             </p>
             
@@ -130,14 +130,14 @@
                 
                 <br>管理者：azhr98
                 <br>
-                <br>最終更新日：20240106
+                <br>最終更新日：20240126
                 <p class="hover-sample">URL：<a href="https://azhr98.github.io/azhr98">https://azhr98.github.io/azhr98</a>
                 </p>
                 <p class="hover-sample"><a href="https://azhr98.github.io/880ra/chiikawaquiz2/chiikawaquiz2">ちいかわ検定はコチラ</a>
                 </p>
                 <br>
                 <br>
-                <br><center>&copy; 2024/01/06 a</center>
+                <br><center>&copy; 2024/01/26 azhr98</center>
 
             </footer>
 
